users page added

--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -2,12 +2,18 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 /* Plugins */
 
+/* Organism */
+
+/* Organism */
+
 /* Molecule */
 @import '/molecule/navbar';
+@import '/molecule/users';
 /* Molecule */
 
 /* Atom */
 @import '/atom/header';
+@import '/atom/footer';
 /* Atom */
 
 /* Base */
