--- a/src/assets/style/molecule/_navbar.scss
+++ b/src/assets/style/molecule/_navbar.scss
@@ -2,6 +2,7 @@
   display: flex;
   height: 60px;
   align-items: center;
+  justify-content: space-between;
 
   a {
     font-size: 16px;
@@ -13,6 +14,19 @@
     }
     &:first-child {
       margin: 0;
+    }
+  }
+  .logout {
+    button {
+      background: #4642fb;
+      color: #fff;
+      padding: 7px 20px;
+      border-radius: 50px;
+      border: none;
+      &:hover,
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
