loader gift added

--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -5,6 +5,7 @@
 /* Organism */
 @import '/organism/auth';
 @import '/organism/login';
+@import '/organism/loader';
 /* Organism */
 
 /* Molecule */
